# base91

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-BSD-3-Clause  README.md  REUSE.toml  base91.nix  default.nix  shell.nix
.github/workflows/: bench.yml  c.yml  go.yml  pypi.yml  python.yml  reuse.yml  rust.yml
docs/: perf-analysis.md  project-layout.md  publishing.md
docs/specs/: 0001-rust-port.md  0002-simd-variant.md  0003-nixpkgs-pybase91.md
go/: base91.go  base91_test.go  bench_test.go  go.mod
rust/: Cargo.toml  rust_out
rust/base91/: Cargo.toml  README.md  build.rs  cbindgen.toml  pyproject.toml
rust/base91-cli/: Cargo.toml  README.md  build.rs
rust/base91-cli/completions/bash/: base91.bash
rust/base91-cli/completions/elvish/: base91.elv
rust/base91-cli/completions/fish/: base91.fish
rust/base91-cli/completions/powershell/: _base91.ps1
rust/base91-cli/completions/zsh/: _base91
rust/base91-cli/man/man1/: base91.1
rust/base91-cli/man/man3/: basE91.3  basE91_init.3
rust/base91-cli/src/: main.rs
rust/base91-cli/tests/: cli.rs
rust/base91/benches/: throughput.rs
rust/base91/examples/: enc_timing.rs
rust/base91/src/: c_api.rs  codec.rs  io.rs  lib.rs  python.rs
rust/base91/src/simd/: aarch64.rs  mod.rs  scalar.rs  x86.rs
rust/base91/tests/: reference_vectors.rs
src/: Makefile  base91.1  base91.c  base91.h  bench.c  cli.c
src/test/: Makefile  test.sh
